--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Mario</title>
-    <link rel="stylesheet" href="meu.css">
+    <link rel="stylesheet" href="mario_icon.png">
+     <link rel="stylesheet" href="meu.css">
+   
     
 </head>
 <body>
